--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <br><br>
         <!--LINKEDIN LOGO LINK-->
         <a href="https://www.linkedin.com/in/xochitl-mora-136579264/">
-          <img src="./LI-Logo.jpeg" alt="LinkedIn Logo" width="221.2" height="54">
+          <img src="LI-Logo.jpeg" alt="LinkedIn Logo" width="221.2" height="54">
         </a>
         <br><br>
         <!--GITHUB LOGO LINK-->
