--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
            <div class="col">
              <div class="card h-100">
                <a class="nav-link" href="https://github.com/featherstoned/PacMen">
-               <img src="./COMMITED.MIT. PacMen Exercise/pacmen.jpeg" class="card-img-top" alt="pacmen"></a>
+               <img src="./PacMen Exercise/pacmen.jpeg" class="card-img-top" alt="pacmen"></a>
                <div class="card-body">
                  <a class="nav-link" href="https://github.com/featherstoned/PacMen">
                    <h5 class="card-title">Random PacMen</h5>
